# API-Analysa

./: .dockerignore  .gitignore  Dockerfile  GUIA_TESTES_MANUAIS.md  RAILWAY_DEPLOY.md  README.md  RESUMO_CONFIGURACAO.md  docker-compose.yml  env.complete.example  env.example  pyproject.toml  railway.env.production  railway.json  requirements.txt  supabase_setup.sql
.github/workflows/: ci-cd.yml
docs/: api_exames_specification.markdown
framework/agents/: api_architect.yaml  context_manager.yaml  database_architect.yaml  delivery_orchestrator.yaml  delivery_reviewer.yaml  expert_developer.yaml  spec_planner.yaml  test_engineer.yaml
framework/knowledge_base/: CONTEXT.md  project_overview.md
framework/releases/desenvolvimento base da api (tive que retirar end-points de autenticação e usuários)/: database_design.md  specification.md
framework/runtime/: api_design.md  status_tracking.md
scripts/: final_validation.py  run_sprint3_tests.py  run_sprint4_tests.py  setup_database.py  start_app.py  test_api_connectivity.py  test_auth_detailed.py  test_basic_swagger.py  test_cicd.py  test_direct_upload.py  test_docker_build.py  test_env.py  test_exam_upload.py  test_production_api.py  test_railway_deploy.py  test_real_exam_upload.py  test_real_features.py  test_sprint4_direct.py  test_swagger.py  verify_setup.py
src/: __init__.py  main.py
src/api/: auth.py  exams.py  patients.py
src/core/: config.py  logging.py  supabase_client.py
src/database/: seed_data.py
src/models/: auth.py  exam.py  patient.py
src/services/: biomarker_service.py  ocr_service.py  parser_service.py  storage_service.py
supabase/: config.toml
supabase/migrations/: 20241220000001_create_storage_bucket.sql
tests/: __init__.py  conftest.py  test_auth.py  test_biomarker_service.py  test_config.py  test_ocr_service.py  test_parser_service.py  test_patients.py  test_storage_service.py
